syntax = "proto3";

package attrpubapi_v1;

import "Attribute.proto";

message AttributeAndId {
	Attribute attribute = 1;
	bytes attribute_id = 2;
}


message AttributeAndIdList{
    repeated AttributeAndId attribute_and_id_list = 1;
}


message AttributeList {
    repeated Attribute attributes = 1;
}
